chapter7/ex02/results/task2.txt

Status: FAILED!
Reason: Unable to run SuperMarket.py
Error:   File "/home/runner/work/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/SuperMarket.py", line 57
    weeklyTotal += dailyTotal;  // Add last day's total to weekly total
                                               ^
SyntaxError: unterminated string literal (detected at line 57)

Timestamp: 2024-10-29 19:51:37.831572

Status: FAILED!
Reason: Unable to run SuperMarket.py
Error:   File "/home/runner/work/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/SuperMarket.py", line 57
    weeklyTotal += dailyTotal;  // Add last day's total to weekly total
                                               ^
SyntaxError: unterminated string literal (detected at line 57)

Timestamp: 2024-10-29 19:51:37.831683

Status: FAILED!
Reason: Unable to run SuperMarket.py
Error:   File "/home/runner/work/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/SuperMarket.py", line 57
    weeklyTotal += dailyTotal;  // Add last day's total to weekly total
                                               ^
SyntaxError: unterminated string literal (detected at line 57)

Timestamp: 2024-10-29 19:51:37.920587

Status: FAILED!
Reason: Unable to run SuperMarket.py
Error:   File "/home/runner/work/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/SuperMarket.py", line 57
    weeklyTotal += dailyTotal;  // Add last day's total to weekly total
                                               ^
SyntaxError: unterminated string literal (detected at line 57)

Timestamp: 2024-10-29 19:51:37.920675

Status: FAILED!
Reason: Unable to run SuperMarket.py
Error:   File "/home/runner/work/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/SuperMarket.py", line 57
    weeklyTotal += dailyTotal;  // Add last day's total to weekly total
                                               ^
SyntaxError: unterminated string literal (detected at line 57)

Timestamp: 2024-10-29 19:51:37.992595

Status: FAILED!
Reason: Unable to run SuperMarket.py
Error:   File "/home/runner/work/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/SuperMarket.py", line 57
    weeklyTotal += dailyTotal;  // Add last day's total to weekly total
                                               ^
SyntaxError: unterminated string literal (detected at line 57)

Timestamp: 2024-10-29 19:51:37.992671
